# freepdk-gen

./: Cargo.toml  LICENSE  README.md
src/: config.rs  frequency.rs  lib.rs  main.rs  mcu.rs  uart.rs
