[package]
name = "freepdk-gen"
version = "0.1.0"
authors = ["Vladislav Nikonov <pacmancoder@gmail.com>"]
edition = "2018"
description = "FreePDK peripheral generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
anyhow = "1.0"
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }